add watchify, add react router, add basic application structure made in react

--- a/index.html
+++ b/index.html
@@ -3,39 +3,8 @@
         <link href="index.css" type="text/css" rel="stylesheet">
     </head>
     <body>
-        <header>
-            <h1>Nico's Page</h1>
-        </header>
 
-        <nav>
-            <ul>
-                <li>Link 1</li>
-                <li>Link 1</li>
-                <li>Link 1</li>
-                <li>Link 1</li>
-            </ul>
-        </nav>
-
-        <article>
-            <img src="dog.jpg" width="400" height="300">
-            <img src="dog.jpg" width="400" height="300">
-            <img src="dog.jpg" width="400" height="300">
-        </article>
-        <article>
-            <img src="dog.jpg" width="400" height="300">
-            <img src="dog.jpg" width="400" height="300">
-            <img src="dog.jpg" width="400" height="300">
-        </article>
-        <article>
-            <img src="dog.jpg" width="400" height="300">
-            <img src="dog.jpg" width="400" height="300">
-            <img src="dog.jpg" width="400" height="300">
-        </article>
-        <article>
-            <img src="dog.jpg" width="400" height="300">
-            <img src="dog.jpg" width="400" height="300">
-            <img src="dog.jpg" width="400" height="300">
-        </article>
+        <div id="main"></div>
 
         <script src="bundle.js"></script>
 
